uninstall plot juggler
sudo apt-get remove ros-noetic-plotjuggler
sudo apt-get autoremove

sudo apt-get update
Hit:1 https://linux.teamviewer.com/deb stable InRelease                        
Hit:2 http://us.archive.ubuntu.com/ubuntu focal InRelease                      
Get:3 http://packages.ros.org/ros/ubuntu focal InRelease [4.679 B]
Hit:4 http://us.archive.ubuntu.com/ubuntu focal-updates InRelease
Err:3 http://packages.ros.org/ros/ubuntu focal InRelease
  The following signatures were invalid: EXPKEYSIG F42ED6FBAB17C654 Open Robotics <info@osrfoundation.org>
Hit:5 http://us.archive.ubuntu.com/ubuntu focal-backports InRelease
Hit:6 http://us.archive.ubuntu.com/ubuntu focal-security InRelease
Reading package lists... Done
W: GPG error: http://packages.ros.org/ros/ubuntu focal InRelease: The following signatures were invalid: EXPKEYSIG F42ED6FBAB17C654 Open Robotics <info@osrfoundation.org>
E: The repository 'http://packages.ros.org/ros/ubuntu focal InRelease' is not signed.
N: Updating from such a repository can't be done securely, and is therefore disabled by default.
N: See apt-secure(8) manpage for repository creation and user configuration details.

sudo apt-key adv --keyserver 'hkp://keyserver.ubuntu.com:80' --recv-key C1CF6E31E6BADE8868B172B4F42ED6FBAB17C654
In file included from /tmp/arduino/sketches/389F309FDA6C11F5F21A2E09A1059B6C/sketch/sketch_sep25a.ino.cpp:1:0:
/tmp/.arduinoIDE-unsaved2025825-3981-1fhqji7.07ecf/sketch_sep25a/sketch_sep25a.ino: In function 'void loop()':
/tmp/.arduinoIDE-unsaved2025825-3981-1fhqji7.07ecf/sketch_sep25a/sketch_sep25a.ino:103:102: error: 'step_speed' was not declared in this scope
       else if (current_left_speed > target_left_speed) current_left_speed = max(current_left_speed - step_speed, target_left_speed);
                                                                                                      ^
/home/iascr/.arduino15/packages/arduino/hardware/avr/1.8.6/cores/arduino/Arduino.h:93:20: note: in definition of macro 'max'
 #define max(a,b) ((a)>(b)?(a):(b))
                    ^
/tmp/.arduinoIDE-unsaved2025825-3981-1fhqji7.07ecf/sketch_sep25a/sketch_sep25a.ino:106:106: error: 'step_speed' was not declared in this scope
       else if (current_right_speed > target_right_speed) current_right_speed = max(current_right_speed - step_speed, target_right_speed);
                                                                                                          ^
/home/iascr/.arduino15/packages/arduino/hardware/avr/1.8.6/cores/arduino/Arduino.h:93:20: note: in definition of macro 'max'
 #define max(a,b) ((a)>(b)?(a):(b))
                    ^

exit status 1

Compilation error: 'step_speed' was not declared in this scope

[ERROR] [1758795424.212735]: Unable to sync with device; possible link problem or link software version mismatch such as hydro rosserial_python with groovy Arduino
[ERROR] [1758795439.219184]: Unable to sync with device; possible link problem or link software version mismatch such as hydro rosserial_python with groovy Arduino

